[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/gBot_pieces.png" type="Texture" id=1]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://FSM/SimpleEnemy.gd" type="Script" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=5]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=6]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RayShape2D" id=2]
length = 43.401

[sub_resource type="CircleShape2D" id=3]
radius = 28.6387

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "go_back"
}, {
"args": [  ],
"method": "first_dash"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}

[sub_resource type="Resource" id=5]
script = ExtResource( 7 )
__meta__ = {
"graph_offset": Vector2( 923, 278 )
}
name = "Attacking"

[sub_resource type="Resource" id=6]
script = ExtResource( 7 )
__meta__ = {
"graph_offset": Vector2( 242, 18 )
}
name = "Entry"

[sub_resource type="Resource" id=7]
script = ExtResource( 7 )
__meta__ = {
"graph_offset": Vector2( 432.5, 18 )
}
name = "Resting"

[sub_resource type="Resource" id=8]
script = ExtResource( 7 )
__meta__ = {
"graph_offset": Vector2( 574, 278 )
}
name = "SeenPlayer"

[sub_resource type="Resource" id=9]
script = ExtResource( 7 )
__meta__ = {
"graph_offset": Vector2( 814.5, 18 )
}
name = "Wandering"

[sub_resource type="Resource" id=10]
script = ExtResource( 4 )
name = "finished_attacking"

[sub_resource type="Resource" id=11]
script = ExtResource( 5 )
from = "Attacking"
to = "SeenPlayer"
conditions = {
"finished_attacking": SubResource( 10 )
}

[sub_resource type="Resource" id=12]
script = ExtResource( 4 )
name = "start"

[sub_resource type="Resource" id=13]
script = ExtResource( 5 )
from = "Entry"
to = "Resting"
conditions = {
"start": SubResource( 12 )
}

[sub_resource type="Resource" id=14]
script = ExtResource( 4 )
name = "seen_player"

[sub_resource type="Resource" id=15]
script = ExtResource( 5 )
from = "Resting"
to = "SeenPlayer"
conditions = {
"seen_player": SubResource( 14 )
}

[sub_resource type="Resource" id=16]
script = ExtResource( 4 )
name = "finished_resting"

[sub_resource type="Resource" id=17]
script = ExtResource( 5 )
from = "Resting"
to = "Wandering"
conditions = {
"finished_resting": SubResource( 16 )
}

[sub_resource type="Resource" id=18]
script = ExtResource( 4 )
name = "attack"

[sub_resource type="Resource" id=19]
script = ExtResource( 5 )
from = "SeenPlayer"
to = "Attacking"
conditions = {
"attack": SubResource( 18 )
}

[sub_resource type="Resource" id=20]
script = ExtResource( 4 )
name = "finished_walking"

[sub_resource type="Resource" id=21]
script = ExtResource( 5 )
from = "Wandering"
to = "Resting"
conditions = {
"finished_walking": SubResource( 20 )
}

[sub_resource type="Resource" id=22]
script = ExtResource( 4 )
name = "seen_player"

[sub_resource type="Resource" id=23]
script = ExtResource( 5 )
from = "Wandering"
to = "SeenPlayer"
conditions = {
"seen_player": SubResource( 22 )
}

[sub_resource type="Resource" id=24]
script = ExtResource( 2 )
name = ""
states = {
"Attacking": SubResource( 5 ),
"Entry": SubResource( 6 ),
"Resting": SubResource( 7 ),
"SeenPlayer": SubResource( 8 ),
"Wandering": SubResource( 9 )
}
transitions = {
"Attacking": {
"SeenPlayer": SubResource( 11 )
},
"Entry": {
"Resting": SubResource( 13 )
},
"Resting": {
"SeenPlayer": SubResource( 15 ),
"Wandering": SubResource( 17 )
},
"SeenPlayer": {
"Attacking": SubResource( 19 )
},
"Wandering": {
"Resting": SubResource( 21 ),
"SeenPlayer": SubResource( 23 )
}
}

[node name="SimpleEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )
charge_distace = 30
attack_distance = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -16 )
shape = SubResource( 1 )
disabled = true

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -16 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, -16 )
rotation = 1.57079
shape = SubResource( 3 )
disabled = true

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.04, 0.04 )

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 488, 247, 356, 267 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, 160 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 485, 564, 344, 123 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -19.5228
margin_top = -37.3609
margin_right = 20.4772
margin_bottom = -23.3609
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FSM" type="Node" parent="."]
script = ExtResource( 6 )
state_machine = SubResource( 24 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[connection signal="body_entered" from="HitArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="transited" from="FSM" to="." method="_on_FSM_transited"]
[connection signal="updated" from="FSM" to="." method="_on_FSM_updated"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
